@@ -53,7 +53,6 @@ CL_CC_SUNPRO        dnl sets variable CC_SUNPRO
 CL_CC_CPLUSPLUS     dnl sets variable CC_CPLUSPLUS
 CL_CC_NEED_DEEMA    dnl sets variable CC_NEED_DEEMA
 CL_AS_UNDERSCORE    dnl sets variable AS_UNDERSCORE, DEFS ASM_UNDERSCORE
-CL_IRIX_SUN         dnl LIBS -lsun
 CL_SOCKET           dnl LIBS -lsocket
 CL_CC_WORKS         dnl final CC check
 dnl
