@@ -1,17 +1,0 @@
-dnl Copyright (C) 1993-2002 Free Software Foundation, Inc.
-dnl This file is free software, distributed under the terms of the GNU
-dnl General Public License.  As a special exception to the GNU General
-dnl Public License, this file may be distributed as part of a program
-dnl that contains a configuration script generated by Autoconf, under
-dnl the same distribution terms as the rest of that program.
-
-dnl From Bruno Haible, Marcus Daniels.
-
-AC_PREREQ(2.13)
-
-AC_DEFUN([CL_IRIX_SUN],
-[AC_CHECK_FUNC(getpwnam, have_getpwnam=1)
-if test -z "$have_getpwnam"; then
-  AC_CHECK_LIB(sun,getpwnam)
-fi
-])
